Improve alignment of "edit this entry" link when viewing a post. Also improves i18n. Fixes #3163
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4223 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -2126,6 +2126,11 @@ div.post-content {
 	margin-left: 105px;
 }
 
+p.date span,
+.post-utility {
+	font-style: italic;
+}
+
 p.date,
 p.postmetadata {
 	color: #888;
